# dans-crew-template

./: README.md  agents.py  banana_api.md  banana_api.py  banana_scrape.md  banana_scrape.py  bananas.md  hubspot_scrape.py  idea_details.md  main.py  pyproject.toml  tasks.py  top_ideas.md
tests/: test_search_tools.py
tools/: scrape_hubspot.py  search_tools.py
